[gd_scene load_steps=11 format=3 uid="uid://b4wl1n5o2xmkc"]

[ext_resource type="Script" uid="uid://btjrikca81o3u" path="res://scripts/level_1.gd" id="1_level1"]
[ext_resource type="PackedScene" uid="uid://v2mrtvkw8ykj" path="res://scenes/characters/player.tscn" id="2_player"]
[ext_resource type="Texture2D" uid="uid://8c7wao4snfc8" path="res://assets/sprites/world_tileset.png" id="2_sk5k4"]
[ext_resource type="PackedScene" uid="uid://c21da7t5pk60k" path="res://scenes/zones/killzone.tscn" id="3_killzone"]
[ext_resource type="PackedScene" uid="uid://q02d1kgrakft" path="res://scenes/zones/win_zone.tscn" id="4_winzone"]
[ext_resource type="Texture2D" uid="uid://dosbxu1kptkwm" path="res://assets/sprites/platforms.png" id="5_tileset"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oc4kc"]
texture = ExtResource("2_sk5k4")
texture_region_size = Vector2i(18, 18)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0

[sub_resource type="TileSet" id="TileSet_world1"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_oc4kc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_world1"]
texture = ExtResource("5_tileset")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_world2"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_world1")

[node name="Level_1" type="Node2D"]
script = ExtResource("1_level1")

[node name="World1TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_world1")
format = 2
layer_0/name = "Main"
layer_0/tile_data = PackedInt32Array(1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0)

[node name="World2TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_world2")
format = 2
layer_0/name = "Main"
layer_0/tile_data = PackedInt32Array(1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(100, 350)

[node name="Killzone" parent="." instance=ExtResource("3_killzone")]
position = Vector2(320, 500)
scale = Vector2(50, 1)

[node name="WinZone" parent="." instance=ExtResource("4_winzone")]
position = Vector2(550, 350)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WorldIndicator" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 20
text = "World 1 - Press F to switch"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)
zoom = Vector2(1.5, 1.5)
